--- a/app/index.html
+++ b/app/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>NHS</title>
+    </head>
+    <body>
+        Hello 
+    </body>
+</html>
