--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,12 @@
         <meta charset="utf-8">
         <title>NHS</title>
     </head>
-    <body>
-        Hello 
+    <body ng-app="nhs" ng-controller="main">
+        Hello
+        <script src="lib/js/angular.js"></script>
+        <script src="lib/js/angular-ui-router.js"></script>
+        <script src="app.js"></script>
+        <script src="app.routes.js"></script>
+        <script src="controllers/main.js"></script>
     </body>
 </html>
