--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
     </head>
     <body ng-app="nhs" ng-controller="main">
         Hello
+        <div ui-view></div>
+
         <script src="lib/js/angular.js"></script>
         <script src="lib/js/angular-ui-router.js"></script>
         <script src="app.js"></script>
