--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>NHS</title>
     </head>
-    <body ng-app="nhs" ng-controller="main">
+    <body ng-app="nhs" ng-controller="mainController">
         Hello
         <div ui-view></div>
 
@@ -12,6 +12,9 @@
         <script src="lib/js/angular-ui-router.js"></script>
         <script src="app.js"></script>
         <script src="app.routes.js"></script>
+        <script src="services/auth.js"></script>
+        <script src="services/users.js"></script>
         <script src="controllers/main.js"></script>
+        <script src="controllers/users.js"></script>
     </body>
 </html>
