--- a/app/index.html
+++ b/app/index.html
@@ -45,7 +45,10 @@
         <script src="app.routes.js"></script>
         <script src="services/auth.js"></script>
         <script src="services/users.js"></script>
+        <script src="services/community-service.js"></script>
         <script src="controllers/main.js"></script>
         <script src="controllers/users.js"></script>
+        <script src="controllers/add-event.js"></script>
+
     </body>
 </html>
