crud for events

--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
         <script src="services/users.js"></script>
         <script src="services/community-service.js"></script>
         <script src="controllers/main.js"></script>
+        <script src="controllers/events.js"></script>
         <script src="controllers/users.js"></script>
         <script src="controllers/add-event.js"></script>
 
