--- a/app/index.html
+++ b/app/index.html
@@ -17,11 +17,11 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-            			<a href="/" class="navbar-brand"><span class="glyphicon glyphicon-pushpin"></span> HH NHS</a>
+            			<a href="#/events" class="navbar-brand"><span class="glyphicon glyphicon-pushpin"></span> HH NHS</a>
             		</div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a ui-sref="users"><span class="glyphicon glyphicon-user"></span> Users</a></li>
+                            <li><a ui-sref="events"><span class="glyphicon glyphicon-hourglass"></span> Events</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li ng-if="!loggedIn"><a href="/login">Login</a></li>
