dash recognizes user

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
         <script src="lib/js/angular-ui-router.js"></script>
         <script src="app.js"></script>
         <script src="app.routes.js"></script>
+        <script src="services/users.js"></script>
         <script src="controllers/main.js"></script>
         <script src="controllers/login.js"></script>
         <script src="controllers/dashboard.js"></script>
