--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,13 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/lib/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
         <title>NHS</title>
     </head>
     <body ng-app="nhs" ng-controller="main">
-        <div ng-hide="$state.includes('login')"> Welcome {{user.username}} !! <button ui-sref="userCreate">Create</button><button>Edit</button></div>
+        <div ng-hide="state.includes('login')"> Welcome {{user.username}} !! <button ui-sref="event.create">Create</button><button ui-sref="event.edit">Edit</button></div>
         <div ui-view></div>
 
         <script src="lib/js/angular.js"></script>
@@ -16,5 +19,6 @@
         <script src="controllers/main.js"></script>
         <script src="controllers/login.js"></script>
         <script src="controllers/dashboard.js"></script>
+        <script src="controllers/event.js"></script>
     </body>
 </html>
