--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,26 @@
         <title>NHS</title>
     </head>
     <body ng-app="nhs" ng-controller="main">
-        <div ng-hide="state.includes('login')"> <a ui-sref="dashboard">Welcome {{user.username}}</a> !! <button ui-sref="event.create">Create</button><button ui-sref="event.edit">Edit</button></div>
-        <div ui-view></div>
+        <header>
+        	<div class="navbar navbar-inverse" ng-if="user.loggedIn">
+        	<div class="container">
+        		<div class="navbar-header">
+        			<a ui-sref="dashboard" class="navbar-brand"><span class="glyphicon glyphicon-pin text-danger"></span>NHS</a>
+        		</div>
+        		<ul class="nav navbar-nav">
+        			<li><a ui-sref="dashboard"><span class="glyphicon glyphicon-user"></span>Events</a></li>
+        		</ul>
+        		<ul class="nav navbar-nav navbar-right">
+        			<li class="navbar-text">Hello {{ user.username }}!</li>
+        			<li><a ui-sref="login" ng-click="logout()">Logout</a></li>
+        		</ul>
+        	</div>
+        	</div>
+        </header>
+        <main class="container">
+            <div ui-view></div>
+        </main>
+        
 
         <script src="lib/js/angular.js"></script>
         <script src="lib/js/angular-ui-router.js"></script>
