--- a/public/index.html
+++ b/public/index.html
@@ -10,27 +10,37 @@
     <body ng-app="nhs" ng-controller="main">
         <header>
         	<div class="navbar navbar-inverse" ng-if="user.loggedIn">
-        	<div class="container">
-        		<div class="navbar-header">
-        			<a ui-sref="dashboard" class="navbar-brand"><span class="glyphicon glyphicon-pin text-danger"></span>NHS</a>
-        		</div>
-        		<ul class="nav navbar-nav">
-        			<li><a ui-sref="dashboard"><span class="glyphicon glyphicon-user"></span>Events</a></li>
-        		</ul>
-        		<ul class="nav navbar-nav navbar-right">
-        			<li class="navbar-text">Hello {{ user.username }}!</li>
-        			<li><a ui-sref="login" ng-click="logout()">Logout</a></li>
-        		</ul>
-        	</div>
+            	<div class="container">
+            		<div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-target" aria-expanded="false">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+            			<a ui-sref="dashboard" class="navbar-brand"><span class="glyphicon glyphicon-pushpin text-danger"></span>NHS</a>
+            		</div>
+                    <div class="collapse navbar-collapse" id="navbar-collapse-target">
+                        <ul class="nav navbar-nav">
+                            <li><a ui-sref="dashboard"><span class="glyphicon glyphicon-hourglass"></span>Events</a></li>
+                        </ul>
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="navbar-text">Hello {{ user.username }}!</li>
+                            <li><a ui-sref="login" ng-click="logout()">Logout</a></li>
+                        </ul>
+                    </div>
+            	</div>
         	</div>
         </header>
+
         <main class="container">
             <div ui-view></div>
         </main>
 
-
+        <script src="lib/js/jquery.js"></script>
+        <script src="lib/js/bootstrap.js"></script>
         <script src="lib/js/angular.js"></script>
         <script src="lib/js/angular-ui-router.js"></script>
+
         <script src="app.js"></script>
         <script src="app.routes.js"></script>
         <script src="services/users.js"></script>
