--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,10 @@
 
         <script src="app.js"></script>
         <script src="app.routes.js"></script>
+
+        <script src="services/auth.js"></script>
         <script src="services/users.js"></script>
+
         <script src="controllers/main.js"></script>
         <script src="controllers/login.js"></script>
         <script src="controllers/dashboard.js"></script>
