Log in looks at Database

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <li class="navbar-text">Hello {{ user.username }}!</li>
-                            <li><a ui-sref="login" ng-click="logout()">Logout</a></li>
+                            <li><a ng-click="logout()">Logout</a></li>
                         </ul>
                     </div>
             	</div>
