--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
         <script src="app.routes.js"></script>
 
         <script src="services/auth.js"></script>
+        <script src="services/events.js"></script>
         <script src="services/users.js"></script>
 
         <script src="controllers/main.js"></script>
