--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
         <link rel="stylesheet" href="/lib/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="/default.css" title="no title" charset="utf-8">
         <title>NHS</title>
     </head>
     <body ng-app="nhs" ng-controller="main">
