--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-        <link rel="stylesheet" href="/lib/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
-        <link rel="stylesheet" href="/default.css" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="./lib/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="./lib/css/ui-bootstrap-custom-2.0.0-csp.css" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="./default.css" title="no title" charset="utf-8">
         <title>NHS</title>
     </head>
     <body ng-app="nhs" ng-controller="main">
@@ -37,10 +38,12 @@
             <div ui-view></div>
         </main>
 
-        <script src="lib/js/jquery.js"></script>
-        <script src="lib/js/bootstrap.js"></script>
-        <script src="lib/js/angular.js"></script>
-        <script src="lib/js/angular-ui-router.js"></script>
+        <script src="./lib/js/jquery.js"></script>
+        <script src="./lib/js/bootstrap.js"></script>
+        <script src="./lib/js/angular.js"></script>
+        <script src="./lib/js/angular-ui-router.js"></script>
+        <script src="./lib/js/ui-bootstrap-custom-2.0.0.js"></script>
+        <script src="./lib/js/ui-bootstrap-custom-tpls-2.0.0.js"></script>
 
         <script src="app.js"></script>
         <script src="app.routes.js"></script>
