--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./default.css" title="no title" charset="utf-8">
         <title>NHS</title>
     </head>
-    <body ng-app="nhs" ng-controller="main">
+    <body ng-app="nhs" ng-controller="main" ng-strict-di>
         <header>
         	<div class="navbar navbar-inverse" ng-if="user.loggedIn">
             	<div class="container">
@@ -59,5 +59,6 @@
         <script src="controllers/dashboard.js"></script>
         <script src="controllers/event.js"></script>
 		<script src="controllers/member.js"></script>
+        <!-- <script src="all.js"></script> -->
     </body>
 </html>
