--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             <div ui-view></div>
         </main>
 
-        <script src="./lib/js/jquery.js"></script>
+        <!-- <script src="./lib/js/jquery.js"></script>
         <script src="./lib/js/bootstrap.js"></script>
         <script src="./lib/js/angular.js"></script>
         <script src="./lib/js/angular-ui-router.js"></script>
@@ -58,7 +58,7 @@
         <script src="controllers/login.js"></script>
         <script src="controllers/dashboard.js"></script>
         <script src="controllers/event.js"></script>
-		<script src="controllers/member.js"></script>
-        <!-- <script src="all.js"></script> -->
+		<script src="controllers/member.js"></script> -->
+        <script src="all.js"></script>
     </body>
 </html>
