--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="./lib/css/bootstrap.css" media="screen" title="no title" charset="utf-8">
         <link rel="stylesheet" href="./lib/css/ui-bootstrap-custom-2.0.0-csp.css" title="no title" charset="utf-8">
         <link rel="stylesheet" href="./default.css" title="no title" charset="utf-8">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <title>NHS</title>
     </head>
     <body ng-app="nhs" ng-controller="main" ng-strict-di>
