--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./default.css" title="no title" charset="utf-8">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <title>NHS</title>
+        <title>TTC</title>
     </head>
     <body ng-app="nhs" ng-controller="main" ng-strict-di>
         <header>
