--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
             <div ui-view></div>
         </main>
 
+        <footer>
+            <p>Made by Mathew Varughese and Jason Walker</p>
+        </footer>
+
         <script src="./lib/js/jquery.js"></script>
         <script src="./lib/js/bootstrap.js"></script>
         <script src="./lib/js/angular.js"></script>
